[gd_scene load_steps=2 format=2]

[ext_resource path="res://WorldRelated/AbstractWorldSlice.gd" type="Script" id=1]

[node name="AbstractWorldSlice" type="Node2D"]
script = ExtResource( 1 )

[node name="TileContainer" type="Node2D" parent="."]

[node name="AreaRegionContainer" type="Node2D" parent="."]

[node name="ObjectContainer" type="Node2D" parent="."]

[node name="PlayerSpawnCoordsContainer" type="Node2D" parent="."]
